# react-native-your-unified-player

./: CONTRIBUTING.md  LICENSE  README.md  UnifiedPlayer.podspec  YourUnifiedPlayer.podspec  android_logs.txt  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/unifiedplayer/: UnifiedPlayerEventEmitter.kt  UnifiedPlayerModule.kt  UnifiedPlayerPackage.kt  UnifiedPlayerView.kt  UnifiedPlayerViewManager.kt
android/src/main/java/com/yourunifiedplayer/: YourUnifiedPlayerPackage.kt  YourUnifiedPlayerView.kt  YourUnifiedPlayerViewManager.kt
android/src/main/jni/: CMakeLists.txt  YourLibOnLoad.cpp
cpp/: YourUnifiedPlayer.cpp  YourUnifiedPlayer.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/unifiedplayer/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/yourunifiedplayer/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/UnifiedPlayerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/UnifiedPlayerExample.xcodeproj/: project.pbxproj
example/ios/UnifiedPlayerExample.xcodeproj/xcshareddata/xcschemes/: UnifiedPlayerExample.xcscheme
example/ios/UnifiedPlayerExample.xcworkspace/: contents.xcworkspacedata
example/ios/YourUnifiedPlayerExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/YourUnifiedPlayerExample.xcodeproj/: project.pbxproj
example/ios/YourUnifiedPlayerExample.xcodeproj/xcshareddata/xcschemes/: YourUnifiedPlayerExample.xcscheme
example/patches/@react-native+gradle-plugin+0.78.2/: fix-gradle-plugin.patch
example/src/: App.tsx
ios/: UnifiedPlayerModule.h  UnifiedPlayerModule.m  UnifiedPlayerUIView.h  UnifiedPlayerViewManager.m  YourUnifiedPlayerView.mm  YourUnifiedPlayerView.swift
src/: YourUnifiedPlayerView.tsx  YourUnifiedPlayerViewNativeComponent.ts  YourUnifiedVideoPlayer.tsx  index.tsx
